# zen-claude-bridge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements.txt
examples/: architecture.md  claude-gateway-settings.md  managed-deepseek-proxy.md  troubleshooting.md
scripts/: diagnose-windows.bat  run-all.bat  run-bridge.bat  run-deepseek-proxy.bat  setup-windows.bat  test-bridge.bat  update-deepseek-proxy.bat
src/zen_claude_bridge/: __init__.py  app.py  compaction.py  config.py  conversions.py  security.py  streaming.py  token_count.py
tests/: test_compaction.py  test_conversions.py  test_dot_probe.py  test_models.py  test_proxy_path_detection.py  test_recovery_notice.py  test_security.py  test_token_count.py
